--- a/share/qt/Info.plist.in
+++ b/share/qt/Info.plist.in
@@ -71,7 +71,7 @@
         <string>application/x-firelynxcoin-payment-request</string>
         <key>public.filename-extension</key>
         <array>
-          <string>firelynxcoinpaymentrequest</string>
+          <string>saci-de-banimentrequest</string>
         </array>
       </dict>
     </dict>
