--- a/.travis.yml
+++ b/.travis.yml
@@ -56,13 +56,13 @@ before_install:
     - travis_retry sudo add-apt-repository ppa:ubuntu-wine/ppa -y
     - export PATH=$(echo $PATH | tr ':' "\n" | sed '/\/opt\/python/d' | tr "\n" ":" | sed "s|::|:|g")
 install:
-    - if [ "$PYZMQ" = "true" ]; then pip install pyzmq --user ; fi
+    - if [ "$PYZMQ" = "true" ]; then pip install --upgrade pip pyzmq --user ; fi
     - if [ -n "$PPA" ]; then travis_retry sudo add-apt-repository "$PPA" -y; fi
     - if [ -n "$DPKG_ADD_ARCH" ]; then sudo dpkg --add-architecture "$DPKG_ADD_ARCH" ; fi
     - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get update; fi
     - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get install --no-install-recommends --no-upgrade -qq $PACKAGES; fi
-    - python -m pip install --upgrade pip
-    - sudo pip install --upgrade pip
+   # - python -m pip install --upgrade pip
+   # - sudo pip install --upgrade pip
     - python setup.py install --user && cd ..
 before_script:
     - unset CC; unset CXX
