--- a/.travis.yml
+++ b/.travis.yml
@@ -62,8 +62,8 @@ install:
     - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get update; fi
     - if [ -n "$PACKAGES" ]; then travis_retry sudo apt-get install --no-install-recommends --no-upgrade -qq $PACKAGES; fi
    # - python -m pip install --upgrade pip
-    - pip install --upgrade pip
-    - python setup.py install --user && cd ..
+ #   - pip install --upgrade pip
+ #   - python setup.py install --user && cd ..
 before_script:
     - unset CC; unset CXX
     - unset DISPLAY
